@@ -79,6 +79,9 @@
 /* Define if your compiler supports prototyping */
 #undef HAVE_ANSI_PROTOTYPES
 
+/* Define if we should use GNU regex */
+#undef USE_GNUREGEX
+
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
 
